--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -65,10 +65,10 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ".:/app"
-    # command: ["./bin/CeleryWorker"]
     environment:
       CELERY_BROKER_URL: "redis://aih-worker-redis:6379/0"
       CELERY_RESULT_BACKEND: "redis://aih-worker-redis:6379/0"
+      C_FORCE_ROOT: true
     depends_on:
       - aih-worker-app
       - aih-worker-redis
